# typora-patcher

./: Cargo.toml  README.md
files/: crack-minimal-fix.js
src/: asar.rs  fuses.rs  hook.rs  main.rs
