[package]
name = "typora-patcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "typora-patcher"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
